# ChineseChess

client/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in
client/autom4te.cache/: output.0  traces.0  traces.1
client/src/: Makefile  Makefile.am  Makefile.in  chessbord.c  chessbord.h  chessman.h  chessman.h.gch  client  common.h  common.h.gch  ipconfig  ipconfig~  login_dialog.c  login_dialog.h  login_dialog.h.gch  main.c  main_dialog.c  main_dialog.h  main_dialog.h.gch  net.c  net.h  net.h.gch  register_dialog.c  register_dialog.h  register_dialog.h.gch  room_dialog.c  room_dialog.h  rules.c  rules.h  rules.h.gch  services.c  services.h  services.h.gch  sound.c  sound.h  sound.h.gch  style.css  ui.c  ui.h
client/src/.deps/: chessbord.Po  login_dialog.Po  main.Po  main_dialog.Po  net.Po  register_dialog.Po  room_dialog.Po  rules.Po  services.Po  sound.Po  ui.Po
server/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in
server/autom4te.cache/: output.0  traces.0  traces.1
server/src/: Makefile  Makefile.am  Makefile.in  common.h  database.c  database.h  main.c  net.c  net.h  server  services.c  services.h
server/src/.deps/: database.Po  main.Po  net.Po  services.Po
